unpackaged/main/default/objects/TMA__c/TMA__c.object-meta.xml
<CustomObject>
    <label>TMA</label>
    <nameField>
        <displayFormat>TMA-{0000}</displayFormat>
        <label>TMA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TMA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>