unpackaged/main/default/objects/TMA__c/fields/Charge__c.field-meta.xml
<CustomField>
    <fullName>Charge__c</fullName>
    <label>Charge Estimated</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>