unpackaged/main/default/objects/TMA__c/fields/Comment_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Comment_Resolution__c</fullName>
    <label>Resolution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>