unpackaged/main/default/objects/TMA__c/fields/Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Date__c</fullName>
    <label>Go Live Date (Estimated)</label>
    <type>Date</type>
</CustomField>