unpackaged/main/default/objects/TMA__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1- Highest</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2- Medium</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - Low</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 - Lowest</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>