unpackaged/main/default/objects/TMA__c/fields/Started_Date__c.field-meta.xml
<CustomField>
    <fullName>Started_Date__c</fullName>
    <label>Started Date</label>
    <type>Date</type>
</CustomField>