unpackaged/main/default/objects/TMA__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standby</fullName>
            </value>
            <value>
                <fullName>Backlog</fullName>
                <default>true</default>
                <label>Backlog</label>
            </value>
            <value>
                <fullName>Diagnosed</fullName>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>To be deployed to UAT</fullName>
                <label>To be deployed to PREPROD</label>
            </value>
            <value>
                <fullName>2PACE Testing in UAT</fullName>
                <label>2PACE Testing in PREPROD</label>
            </value>
            <value>
                <fullName>Testing</fullName>
                <label>Client Testing in PREPROD</label>
            </value>
            <value>
                <fullName>To be deployed to PROD</fullName>
            </value>
            <value>
                <fullName>Client Testing in Prod</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>2Pace Testing</fullName>
                <isActive>false</isActive>
                <label>2Pace Testing</label>
            </value>
            <value>
                <fullName>Done</fullName>
                <isActive>false</isActive>
                <label>Done</label>
            </value>
            <value>
                <fullName>Reviewed</fullName>
                <isActive>false</isActive>
                <label>Reviewed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>