unpackaged/main/default/objects/TMA__c/fields/Tech_Admin__c.field-meta.xml
<CustomField>
    <fullName>Tech_Admin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tech_Admin</label>
    <referenceTo>TMA_Lab_Admin__c</referenceTo>
    <relationshipLabel>TMA (Tech_Admin)</relationshipLabel>
    <relationshipName>TMA1</relationshipName>
    <type>Lookup</type>
</CustomField>