unpackaged/main/default/objects/TMA__c/fields/Tech_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>Tech_CreatedDate__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_CreatedDate</label>
    <type>Date</type>
</CustomField>