unpackaged/main/default/objects/TMA__c/fields/Tech_CreatedYear__c.field-meta.xml
<CustomField>
    <fullName>Tech_CreatedYear__c</fullName>
    <formula>IF(TEXT(YEAR(DATEVALUE(Created_Date__c))) == &#39;2023&#39;,2023,IF(TEXT(YEAR(DATEVALUE(Created_Date__c))) == &#39;2024&#39;,2024,null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_CreatedYear</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>