unpackaged/main/default/objects/TMA__c/fields/Tech_dsds__c.field-meta.xml
<CustomField>
    <fullName>Tech_dsds__c</fullName>
    <formula>TMA_Lab_Admin__r.Number_of_days__c +  TMA_Lab_Admin_Comitologie__r.Number_of_days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_dsds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>