unpackaged/main/default/objects/TMA__c/fields/TECH_Jira_ID__c.field-meta.xml
<CustomField>
    <fullName>TECH_Jira_ID__c</fullName>
    <label>TECH Jira ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>