unpackaged/main/default/objects/TMA__c/fields/TECH_Message_Synchro_Jira__c.field-meta.xml
<CustomField>
    <fullName>TECH_Message_Synchro_Jira__c</fullName>
    <label>TECH Message Synchro Jira</label>
    <length>255</length>
    <type>Text</type>
</CustomField>