unpackaged/main/default/objects/TMA__c/fields/Tech_Sort_Month__c.field-meta.xml
<CustomField>
    <fullName>Tech_Sort_Month__c</fullName>
    <formula>MONTH(Go_Live_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Sort Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>