unpackaged/main/default/objects/TMA__c/fields/TECH_Statut_Synchro_Jira__c.field-meta.xml
<CustomField>
    <fullName>TECH_Statut_Synchro_Jira__c</fullName>
    <label>TECH Statut Synchro Jira</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non Synchro</fullName>
            </value>
            <value>
                <fullName>Synchro</fullName>
            </value>
            <value>
                <fullName>Erreur Synchro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>