unpackaged/main/default/objects/TMA__c/fields/Tech_TotalDays__c.field-meta.xml
<CustomField>
    <fullName>Tech_TotalDays__c</fullName>
    <formula>TMA_Lab_Admin__r.Number_of_days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_TotalDays</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>