unpackaged/main/default/objects/TMA__c/fields/TMA_Lab_Admin__c.field-meta.xml
<CustomField>
    <fullName>TMA_Lab_Admin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TMA Admin Run</label>
    <referenceTo>TMA_Lab_Admin__c</referenceTo>
    <relationshipLabel>TMA</relationshipLabel>
    <relationshipName>TMA</relationshipName>
    <type>Lookup</type>
</CustomField>