unpackaged/main/default/objects/TMA__c/fields/TMA_Lab_Admin_Comitologie__c.field-meta.xml
<CustomField>
    <fullName>TMA_Lab_Admin_Comitologie__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TMA Lab Admin Comitologie</label>
    <referenceTo>TMA_Lab_Admin__c</referenceTo>
    <relationshipLabel>TMA (TMA Lab Admin Comitologie)</relationshipLabel>
    <relationshipName>TMA2</relationshipName>
    <type>Lookup</type>
</CustomField>