unpackaged/main/default/objects/TMA__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bug</fullName>
                <label>Bug 📍</label>
            </value>
            <value>
                <fullName>Change Request</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
                <label>Task ✅</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>