unpackaged/main/default/objects/TMA__c/validationRules/CheckGoLiveDate.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckGoLiveDate</fullName>
    <active>true</active>
    <description>Field Go Live Date must be filled in before changign status to DONE</description>
    <errorConditionFormula>(ISBLANK(Go_Live_Date__c) ||  ISNULL(Go_Live_Date__c) ) &amp;&amp;  ISPICKVAL(Status__c, &#39;Done&#39;)</errorConditionFormula>
    <errorMessage>Go live date should be filled in before changing status to &#39;Done&#39;.</errorMessage>
</ValidationRule>