unpackaged/main/default/objects/TMA__c/validationRules/TMA_AcceptanceCriteriaCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>TMA_AcceptanceCriteriaCheck</fullName>
    <active>true</active>
    <description>Acceptance Criteria should not be blank.</description>
    <errorConditionFormula>LEN(Acceptance_Criteria__c) = 0</errorConditionFormula>
    <errorMessage>Acceptance Criteria should not be blank.</errorMessage>
</ValidationRule>