unpackaged/main/default/objects/TMA__c/validationRules/TMA_Validate_Charge.validationRule-meta.xml
<ValidationRule>
    <fullName>TMA_Validate_Charge</fullName>
    <active>true</active>
    <errorConditionFormula>(ISBLANK(Charge__c) || ISNULL(Charge__c) ) &amp;&amp; ISPICKVAL(Status__c, &#39;Closed&#39;)</errorConditionFormula>
    <errorMessage>Estimation must be filled in before changing status to &#39;Closed&#39;.</errorMessage>
</ValidationRule>