unpackaged/main/default/objects/TMA__c/validationRules/TMA_Validate_Resolution.validationRule-meta.xml
<ValidationRule>
    <fullName>TMA_Validate_Resolution</fullName>
    <active>true</active>
    <errorConditionFormula>(ISBLANK(Comment_Resolution__c) || ISNULL(Comment_Resolution__c) ) &amp;&amp; ISPICKVAL(Status__c, &#39;Done&#39;)</errorConditionFormula>
    <errorMessage>Resolution must be filled in before changing status to &#39;Closed&#39;.</errorMessage>
</ValidationRule>