unpackaged/main/default/objects/TMA__c/validationRules/TMA_Validate_Status_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>TMA_Validate_Status_Change</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    OR(
        AND(
            ISPICKVAL(PRIORVALUE(Status__c), &#39;Diagnosed&#39;),
            NOT(
                OR(
                    ISPICKVAL(Status__c, &#39;Ongoing&#39;),
                    ISPICKVAL(Status__c, &#39;Standby&#39;),
                    ISPICKVAL(Status__c, &#39;On Hold&#39;),
                    ISPICKVAL(Status__c, &#39;Canceled&#39;)
                )
            )
        ),
        AND(
            ISPICKVAL(PRIORVALUE(Status__c), &#39;Backlog&#39;),
            ISPICKVAL(Status__c, &#39;Diagnosed&#39;),
            ISPICKVAL(Status__c, &#39;Standby&#39;),
            ISPICKVAL(Status__c, &#39;Canceled&#39;)
        ),
        AND(
            ISPICKVAL(PRIORVALUE(Status__c), &#39;To be deployed to Prod&#39;),
            NOT(
                OR(
                    ISPICKVAL(Status__c, &#39;Client Testing in Prod&#39;),
                    ISPICKVAL(Status__c, &#39;Standby&#39;),
                    ISPICKVAL(Status__c, &#39;On Hold&#39;),
                    ISPICKVAL(Status__c, &#39;Canceled&#39;)
                )
            ),
            $User.Title = &#39;Admin Client&#39;
        ),
        AND(
            ISPICKVAL(PRIORVALUE(Status__c), &#39;Client Testing in Prod&#39;),
            NOT(
                OR(
                    ISPICKVAL(Status__c, &#39;Closed&#39;),
                    ISPICKVAL(Status__c, &#39;Standby&#39;),
                    ISPICKVAL(Status__c, &#39;On Hold&#39;),
                    ISPICKVAL(Status__c, &#39;Canceled&#39;)
                )
            ),
            $User.Title = &#39;Admin Client&#39;
        ),
        AND(
            ISPICKVAL(PRIORVALUE(Status__c), &#39;Standby&#39;),
            NOT(
                OR(
                    ISPICKVAL(Status__c, &#39;Ongoing&#39;),
                    ISPICKVAL(Status__c, &#39;On Hold&#39;),
                    ISPICKVAL(Status__c, &#39;Canceled&#39;)
                )
            )
        ),
        AND(
            ISPICKVAL(PRIORVALUE(Status__c), &#39;On Hold&#39;),
            NOT(
                OR(
                    ISPICKVAL(Status__c, &#39;Ongoing&#39;),
                    ISPICKVAL(Status__c, &#39;Standby&#39;),
                    ISPICKVAL(Status__c, &#39;Canceled&#39;)
                )
            )
        ),
        AND(
            ISPICKVAL(PRIORVALUE(Status__c), &#39;Ongoing&#39;),
            NOT(
                OR(
                    ISPICKVAL(Status__c, &#39;To be deployed to UAT&#39;),
                    ISPICKVAL(Status__c, &#39;To be deployed to Preprod&#39;),
                    ISPICKVAL(Status__c, &#39;Standby&#39;),
                    ISPICKVAL(Status__c, &#39;On Hold&#39;),
                    ISPICKVAL(Status__c, &#39;Canceled&#39;)
                )
            )
        )
    )
)</errorConditionFormula>
    <errorMessage>YOU CANNOT CHANGE TO THIS STATUS.</errorMessage>
</ValidationRule>